objects/ssot__CareRequestDrug__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApprovedUnitsQuantity__c</fullName>
        <label>Approved Units</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationApprovalIdentifier__c</fullName>
        <label>Authorization Approval Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationReferenceIdentifier__c</fullName>
        <label>Authorization Reference Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestCaseId__c</fullName>
        <label>Care Request Case Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestId__c</fullName>
        <label>Care Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDeterminationNoteText__c</fullName>
        <label>Clinical Determination Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDeterminationReasonId__c</fullName>
        <label>Clinical Determination Reason</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDetermination__c</fullName>
        <label>Clinical Determination</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeType__c</fullName>
        <label>Code Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysSupplyQuantity__c</fullName>
        <label>Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionDateTime__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedUnitsQuantity__c</fullName>
        <label>Denied Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DirectionOfUseText__c</fullName>
        <label>Direction Of Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserAddressText__c</fullName>
        <label>Dispenser Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserCity__c</fullName>
        <label>Dispenser City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserCountryCode__c</fullName>
        <label>Dispenser Country Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserCountry__c</fullName>
        <label>Dispenser Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserFaxNumber__c</fullName>
        <label>Dispenser Fax Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserGeocodeAccuracy__c</fullName>
        <label>Dispenser Geocode Accuracy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserIdentifier__c</fullName>
        <label>Dispenser Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserLatitude__c</fullName>
        <label>Dispenser Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserLongitude__c</fullName>
        <label>Dispenser Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserName__c</fullName>
        <label>Dispenser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserPhoneNumber__c</fullName>
        <label>Dispenser Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserPostalCode__c</fullName>
        <label>Dispenser Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserStateCodeId__c</fullName>
        <label>Dispenser State Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserStateId__c</fullName>
        <label>Dispenser State</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserStreetText__c</fullName>
        <label>Dispenser Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserTaxIdentifier__c</fullName>
        <label>Dispenser Tax Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserVerbalNotificationDateTime__c</fullName>
        <label>Dispenser Verbal Notification Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserWrittenNotificationDateTime__c</fullName>
        <label>Dispenser Written Notification Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DispensingPharmacyId__c</fullName>
        <label>Dispensing Pharmacy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispensingPharmacyObject__c</fullName>
        <label>Dispensing Pharmacy Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoseText__c</fullName>
        <label>Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrugAdministrationType__c</fullName>
        <label>Drug Administration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrugCodeId__c</fullName>
        <label>Drug Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrugCodeObject__c</fullName>
        <label>Drug Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FrequencyText__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Request Drug Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCodeId__c</fullName>
        <label>Medication Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReferenceId__c</fullName>
        <label>Medication Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReferenceObject__c</fullName>
        <label>Medication Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeText__c</fullName>
        <label>Modified Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeType__c</fullName>
        <label>Modified Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDirectionOfUseText__c</fullName>
        <label>Modified Direction Of Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDoseText__c</fullName>
        <label>Modified Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDrugDaysSupplyQuantity__c</fullName>
        <label>Modified Drug Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedFrequencyText__c</fullName>
        <label>Modified Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedMedicationCode__c</fullName>
        <label>Modified Medication Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedNameText__c</fullName>
        <label>Modified Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedStrengthText__c</fullName>
        <label>Modified Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedTherapyDurationQuantity__c</fullName>
        <label>Modified Therapy Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedUnitsQuantity__c</fullName>
        <label>Modified Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionDate__c</fullName>
        <label>Prescription Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionFillDate__c</fullName>
        <label>Prescription Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionFillsQuantity__c</fullName>
        <label>Prescription Fills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionNumberText__c</fullName>
        <label>Prescription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestType__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedUnitsQuantity__c</fullName>
        <label>Requested Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryCodeText__c</fullName>
        <label>Service Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryText__c</fullName>
        <label>Service Category Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityObject__c</fullName>
        <label>Servicing Facility Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingProviderId__c</fullName>
        <label>Servicing Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReason__c</fullName>
        <label>Status Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StrengthText__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapyDurationQuantityUOMId__c</fullName>
        <label>Therapy Duration Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapyDuration__c</fullName>
        <label>Therapy Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577148537_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_DrugCodeId_map_CodeS_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_DrugCodeId_map_CodeS_rel</relationshipLabel>
        <relationshipName>rel_1716577148537_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577150763_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_MedicationCodeId_map_rel</label>
        <referenceTo>ssot__Medication__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_MedicationCodeId_map_rel</relationshipLabel>
        <relationshipName>rel_1716577150763_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716577152911_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDrug_MedicationReferenceI_rel</label>
        <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
        <relationshipLabel>CareRequestDrug_MedicationReferenceI_rel</relationshipLabel>
        <relationshipName>rel_1716577152911_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>